--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
 
 BlobStorage_File_Upload/appsettings.json
+/BlobStorage_File_Upload/bin
+/BlobStorage_File_Upload/obj
+bin
+obj
+/.vs/BlobStorage_File_Upload/v16/.suo
